Updated swagger and token fetch logic
