# authentication-server/swagger.json
@@ -96,6 +96,11 @@
     },
     "/user/logout": {
       "post": {
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "tags": [
           "user"
         ],
@@ -109,6 +114,36 @@
         "responses": {
           "default": {
             "description": "successful operation"
+          }
+        }
+      }
+    },
+    "/user/token": {
+      "get": {
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "summary": "Get new access token",
+        "description": "",
+        "operationId": "refreshToken",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "401": {
+            "description": "Invalid token supplied"
+          },
+          "403": {
+            "description": "Unauthorised access"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
